--- a/bio/resume.html
+++ b/bio/resume.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>resume</title>
 <link rel="stylesheet" type="text/css" href="resume.css">
+<link rel="stylesheet" href="http://at.alicdn.com/t/font_1472647343_6757932.css">
 </head>
 <body>
 <div class="wrapper clearfix">
@@ -14,9 +15,9 @@
 			<p class="will">前端工程师<br/>The font-end engineer</p>
 	    </div>
 		<div class="aside-content">
-			<dl class="baseinfo">
+			<dl class="baseinfo clearfix">
 				<dt>意向职位：</dt>
-				<dd>Web前端开发工程师</dd>
+				<dd>Web前端开发</dd>
 				<dt>期望待遇：</dt>
 				<dd>面议</dd>
 				<dt>工作经历：</dt>
@@ -36,42 +37,51 @@
 				<dt>电话：</dt>
 				<dd>135 2796 7519</dd>
 			</dl>
-			<dl class="skills">
+			<dl class="skills clearfix">
 				<dt>HTML</dt>
 				<dd class="progress">
-					<div class="progress-bar"></div>
+					<div class="progress-bar hl"></div>
 				</dd>
 				<dt>CSS</dt>
 				<dd class="progress">
-					<div class="progress-bar"></div>
+					<div class="progress-bar cs"></div>
 				</dd>
 				<dt>JavaScript</dt>
 				<dd class="progress">
-					<div class="progress-bar"></div>
+					<div class="progress-bar js"></div>
 				</dd>
 				<dt>jQuery</dt>
 				<dd class="progress">
-					<div class="progress-bar"></div>
+					<div class="progress-bar jq"></div>
 				</dd>
 				<dt>Bootstrap</dt>
 				<dd class="progress">
-					<div class="progress-bar"></div>
+					<div class="progress-bar bs"></div>
 				</dd>
 				<dt>Less</dt>
 				<dd class="progress">
-					<div class="progress-bar"></div>
+					<div class="progress-bar ls"></div>
 				</dd>
 				<dt>Vuejs</dt>
 				<dd class="progress">
-					<div class="progress-bar"></div>
+					<div class="progress-bar vs"></div>
 				</dd>
 			</dl>
 		</div>
 		<div class="aside-foot">
 			<ul class="contact">
-				<li class="email">964959033@qq.com</li>
-				<li class="blog">freda.leanote.com</li>
-				<li class="github">github.com/fei-han</li>
+				<li>
+                    <span class="per-iconfont icon-email"></span>
+                    <a href="mailto:13527967519@163.com">13527967519@163.com</a>
+                </li>
+                <li>
+                    <span class="per-iconfont icon-github"></span>
+                    <a href="https://github.com/fei-han">github.com/fei-han</a>
+                </li>
+				<li>
+                    <span class="per-iconfont icon-iconblog"></span>
+                    <a href="http://freda.leanote.com/">freda.leanote.com</a>
+				</li>
 			</ul>
 		</div>
     </div>
@@ -90,51 +100,52 @@
     	</div>
     	<div class="master-project">
     		<h2 class="main-title">项目经历</h2>
-    		<div class="project">
-    			<img src=""/>
-    			<a class="project-title" href="http://fredah.coding.me/projects/JD/JDindex.html" title="http://fredah.coding.me/projects/JD/JDindex.html">仿京东页面</a>
-    			<p class="project-desp">简介：还原京东商城页面，实现像素级重构，加深了对HTML+CSS布局与样式的了解；主要使用HTML+CSS、jQuery</p>
+    		<div class="project clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
+                <a class="project-title" href="http://fredah.coding.me/projects/JD/JDindex.html" title="http://fredah.coding.me/projects/JD/JDindex.html">仿京东页面</a>
+                <p class="project-desp">简介：还原京东商城页面，实现像素级重构，加深了对HTML+CSS布局与样式的了解；主要使用HTML+CSS、jQuery</p>
+    			
     		</div>
-    		<div class="project">
-    			<img src=""/>
+    		<div class="project clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic" />
     			<a class="project-title" href="http://fredah.coding.me/projects/Apple%20slide/" title="http://fredah.coding.me/projects/Apple%20slide/">Apple Slides</a>
     			<p class="project-desp">简介：简单的Apple轮播效果；主要使用HTML+CSS、jQuery</p>
     		</div>
-    		<div class="project">
-    			<img src=""/>
+    		<div class="project clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
     			<a class="project-title" href="http://fredah.coding.me/projects/musicPlay/" title="http://fredah.coding.me/projects/musicPlay/">音乐播放器</a>
     			<p class="project-desp">简介：支持切歌，调节播放进度，单曲循环；主要使用HTML+CSS、jQuery、Ajax</p>
     		</div>
-    		<div class="project">
-    			<img src=""/>
-    			<a class="project-title" href="" title=""></a>
-    			<p class="project-desp"></p>
+    		<div class="project clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
+    			<a class="project-title" href="" title="">音乐播放器</a>
+    			<p class="project-desp">简介：支持切歌，调节播放进度，单曲循环；主要使用HTML+CSS、jQuery、Ajax</p>
     		</div>
-    		<div class="project">
-    			<img src=""/>
+    		<div class="project clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
     			<a class="project-title" href="https://github.com/fei-han/fei-han.github.io/tree/master/plugs/ObjectSlides" title="https://github.com/fei-han/fei-han.github.io/tree/master/plugs/ObjectSlides">轮播插件</a>
     			<p class="project-desp">简介：面向对象的轮播插件，代码清晰，实现可复用性，不依赖CSS；主要使用jQuery</p>
     		</div>
     	</div>
-    	<div class="master-design">
+    	<div class="master-design clearfix">
     		<h2 class="main-title">小设计</h2>
-    		<div class="design">
-    			<img src=""/>
+    		<div class="design lf">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
     			<a class="design-title" href="http://fredah.coding.me/projects/css3Menu/css3Menu.html" title="http://fredah.coding.me/projects/css3Menu/css3Menu.html">动画菜单按钮</a>
     			<p class="design-desp">简介：一组动画菜单按钮；主要使用HTML+CSS3</p>
     		</div>
-    		<div class="design">
-    			<img src=""/>
+    		<div class="design rf">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
     			<a class="design-title" href="" title="">漂亮的登录框</a>
     			<p class="design-desp">简介：漂亮的登录框；主要使用HTML+CSS3</p>
     		</div>
-    		<div class="design">
-    			<img src=""/>
+    		<div class="design lf">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
     			<a class="design-title" href="http://fredah.coding.me/projects/fullPage/fullpage.html" title="http://fredah.coding.me/projects/fullPage/fullpage.html">FullPage</a>
     			<p class="design-desp">简介：实现全屏滚动</p>
     		</div>
-    		<div class="design">
-    			<img src=""/>
+    		<div class="design rf">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
     			<a class="design-title" href="http://fredah.coding.me/projects/fullPage/fullpage.html" title="http://fredah.coding.me/projects/fullPage/fullpage.html">计算器</a>
     			<p class="design-desp">简介：实现简单四则运算</p>
     		</div>
@@ -142,7 +153,7 @@
     	<div class="master-foot">
     		<h2 class="main-title">新工作期望</h2>
     		<p class="wish">希望加入一家互联网公司，从事前端开发的工作，希望公司有扁平的管理结构，有良好的上下沟通渠道。</p>
-    		<a class="aersonal" href="http://fredah.coding.me/FredaH/resume/" title="http://fredah.coding.me/FredaH/resume/">个人在线简历</p>
+    		<a class="personal" href="http://fredah.coding.me/FredaH/resume/" title="http://fredah.coding.me/FredaH/resume/">个人在线简历</p>
     	</div>
     	
     </div>
