--- a/bio/resume.html
+++ b/bio/resume.html
@@ -103,56 +103,56 @@
     		<div class="project clearfix">
     			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
                 <a class="project-title" href="http://fredah.coding.me/projects/JD/JDindex.html" title="http://fredah.coding.me/projects/JD/JDindex.html">仿京东页面</a>
-                <p class="project-desp">简介：还原京东商城页面，实现像素级重构，加深了对HTML+CSS布局与样式的了解；主要使用HTML+CSS、jQuery</p>
+                <p class="project-desp">简介：高度还原京东商城页面，实现像素级重构 <br/>主要运用技术：HTML+CSS、jQuery</p>
     			
     		</div>
     		<div class="project clearfix">
     			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic" />
     			<a class="project-title" href="http://fredah.coding.me/projects/Apple%20slide/" title="http://fredah.coding.me/projects/Apple%20slide/">Apple Slides</a>
-    			<p class="project-desp">简介：简单的Apple轮播效果；主要使用HTML+CSS、jQuery</p>
+    			<p class="project-desp">简介：简单的Apple轮播效果 <br/>主要运用技术：HTML+CSS、jQuery</p>
     		</div>
     		<div class="project clearfix">
     			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
     			<a class="project-title" href="http://fredah.coding.me/projects/musicPlay/" title="http://fredah.coding.me/projects/musicPlay/">音乐播放器</a>
-    			<p class="project-desp">简介：支持切歌，调节播放进度，单曲循环；主要使用HTML+CSS、jQuery、Ajax</p>
+    			<p class="project-desp">简介：依赖百度音乐库资源，支持播放/暂停、下一曲、调节播放进度、单曲循环、随机播放 <br/>主要运用技术：HTML+CSS、jQuery、Ajax</p>
     		</div>
     		<div class="project clearfix">
     			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
     			<a class="project-title" href="" title="">音乐播放器</a>
-    			<p class="project-desp">简介：支持切歌，调节播放进度，单曲循环；主要使用HTML+CSS、jQuery、Ajax</p>
+    			<p class="project-desp">简介：支持切歌，调节播放进度，单曲循环 <br/>主要运用技术：HTML+CSS、jQuery、Ajax</p>
     		</div>
     		<div class="project clearfix">
     			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic"/>
     			<a class="project-title" href="https://github.com/fei-han/fei-han.github.io/tree/master/plugs/ObjectSlides" title="https://github.com/fei-han/fei-han.github.io/tree/master/plugs/ObjectSlides">轮播插件</a>
-    			<p class="project-desp">简介：面向对象的轮播插件，代码清晰，实现可复用性，不依赖CSS；主要使用jQuery</p>
+    			<p class="project-desp">简介：面向对象的轮播插件，代码清晰，实现可复用性，不依赖CSS <br/>主要运用技术：jQuery</p>
     		</div>
     	</div>
-    	<div class="master-design clearfix">
+    	<div class="master-design">
     		<h2 class="main-title">小设计</h2>
-    		<div class="design lf">
-    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
+    		<div class="design clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic" />
     			<a class="design-title" href="http://fredah.coding.me/projects/css3Menu/css3Menu.html" title="http://fredah.coding.me/projects/css3Menu/css3Menu.html">动画菜单按钮</a>
-    			<p class="design-desp">简介：一组动画菜单按钮；主要使用HTML+CSS3</p>
+    			<p class="design-desp">简介：运用CSS3动画制作</p>
     		</div>
-    		<div class="design rf">
-    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
-    			<a class="design-title" href="" title="">漂亮的登录框</a>
-    			<p class="design-desp">简介：漂亮的登录框；主要使用HTML+CSS3</p>
+    		<div class="design clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic" />
+    			<a class="design-title" href="http://fredah.coding.me/projects/login/login.html" title="http://fredah.coding.me/projects/login/login.html">漂亮的登录框</a>
+    			<p class="design-desp">简介：界面简洁优雅</p>
     		</div>
-    		<div class="design lf">
-    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
+    		<div class="design clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic" />
     			<a class="design-title" href="http://fredah.coding.me/projects/fullPage/fullpage.html" title="http://fredah.coding.me/projects/fullPage/fullpage.html">FullPage</a>
-    			<p class="design-desp">简介：实现全屏滚动</p>
+    			<p class="design-desp">简介：运用鼠标滚轮事件实现全屏滚动</p>
     		</div>
-    		<div class="design rf">
-    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100"/>
-    			<a class="design-title" href="http://fredah.coding.me/projects/fullPage/fullpage.html" title="http://fredah.coding.me/projects/fullPage/fullpage.html">计算器</a>
-    			<p class="design-desp">简介：实现简单四则运算</p>
+    		<div class="design clearfix">
+    			<img src="https://placeholdit.imgix.net/~text?txtsize=33&txt=160%C3%97100&w=160&h=100" class="pic" />
+    			<a class="design-title" href="http://fredah.coding.me/projects/calculator/" title="http://fredah.coding.me/projects/calculator/">计算器</a>
+    			<p class="design-desp">简介：运用js实现简单的四则运算</p>
     		</div>
     	</div>
     	<div class="master-foot">
-    		<h2 class="main-title">新工作期望</h2>
-    		<p class="wish">希望加入一家互联网公司，从事前端开发的工作，希望公司有扁平的管理结构，有良好的上下沟通渠道。</p>
+    		<!-- <h2 class="main-title">新工作期望</h2>
+    		<p class="wish">希望加入一家以技术为驱动的互联网公司，从事前端开发的工作，希望公司有扁平的管理结构，有良好的上下沟通渠道。</p> -->
     		<a class="personal" href="http://fredah.coding.me/FredaH/resume/" title="http://fredah.coding.me/FredaH/resume/">个人在线简历</p>
     	</div>
     	
