--- a/bio/resume.html
+++ b/bio/resume.html
@@ -91,7 +91,7 @@
     		<ul class="list">
 				<li>熟悉HTML+CSS布局，遵循W3C规范，编写有语义化、模块化的页面代码</li>
                 <li>熟悉JavaScript、jQuery，实现日常交互效果</li>
-                <li>了解Ajax工作原理和实现方法，了解HTTP协议</li>
+                <li>熟悉Ajax工作原理和实现方法，了解HTTP协议</li>
                 <li>熟练使用Git、Emmet、Markdown等前端开发工具</li>
                 <li>了解Bootsrap、Vue等常见前端框架</li>
                 <li>了解RequireJS、Gulp构建</li>
