--- a/bio/resume.html
+++ b/bio/resume.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>resume</title>
 <link rel="stylesheet" type="text/css" href="resume.css">
-<link rel="stylesheet" href="http://at.alicdn.com/t/font_1472647343_6757932.css">
+<link rel="stylesheet" href="at.alicdn.com/t/font_1472647343_6757932.css">
 </head>
 <body>
 <div class="wrapper clearfix">
